--- a/Share/1010490138.html
+++ b/Share/1010490138.html
@@ -20,6 +20,8 @@ BookSectionEnd();
 <img src="covers/1010490138.jpg" HSPACE=8 align=right>
 好讀書櫃【典藏版】，感謝佳佳整理製作，感謝Sai Lee提供掃瞄檔。<br>
 <br>
+聲明（disclaimer）：此處封面圖像並非來自本電子書掃瞄檔，敬請留意。<br>
+<br>
 <strong>本書簡介：</strong><br>
 <br>
 此短篇集收錄日本社會派推理小說大師松本清張的十一個短篇作品，包括〈老小姐的悲哀〉、〈郎心狼心〉、〈鄉下醫生〉、〈青春的徬徨〉、〈恐嚇者〉、〈腳印〉、〈愛情共謀〉、〈手指〉、〈潛在意識〉、〈共犯〉及〈陶偶報仇記〉。<br>
