Initial upload of books 1010490143 and 1010490168

--- a/Share/1010490136.html
+++ b/Share/1010490136.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("D．H．勞倫斯【查泰萊夫人的情人】");
+SetTitle("D．H．勞倫斯【查泰萊夫人的情人（版本二）】");
 SetLink('<a href="?M=hd&P=fiction-4">小說園地 書目</a>');
 </script>
 
@@ -8,7 +8,7 @@ SetLink('<a href="?M=hd&P=fiction-4">小說園地 書目</a>');
 <?php
 require_once('show-book.php');
 $author = 'D．H．勞倫斯';
-$title = '查泰萊夫人的情人';
+$title = '查泰萊夫人的情人（版本二）';
 $book = 'P1010490136';
 BookSectionBegin();
 ShowBookTitle();
