Revised books 13H7 and 1515

--- a/book/13H7.html
+++ b/book/13H7.html
@@ -12,17 +12,21 @@ $author = '溫瑞安';
 $title = '碎夢刀'; 
 $book = 'D13H7';
 ShowBookTitle();
-ShowUpdbDownload('2013/9/13 (138K) 2013/9/20');
-ShowPdbDownload('2013/9/13 (133K) 2013/9/20');
-ShowPrcDownload('2013/9/13 (135K) 2013/9/20');
-ShowEpubDownload('2013/9/13 (100K) 2013/9/20');
-ShowVEpubDownload('2013/9/13 (100K) 2013/9/20');
+ShowUpdbDownload('2023/4/4 (138K) 2013/9/20 2013/9/13');
+ShowPdbDownload('2013/9/20 (133K) 2013/9/13');
+ShowPrcDownload('2013/9/20 (135K) 2013/9/13');
+ShowEpubDownload('2023/4/4 (100K) 2013/9/20 2013/9/13');
+ShowVEpubDownload('2023/4/4 (100K) 2013/9/20 2013/9/13');
 BookSectionEnd();
 ?>
-好讀書櫃《典藏版》，感謝張燈參照原書再整理校正過。感謝Thomas、敖先榮勘誤。<br>
+好讀書櫃【典藏版】，感謝張燈參照原書再整理校正過。感謝Thomas、敖先榮、Bryan勘誤。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Bryan/IT 2023/4/4)<br>
+其至連怔一怔/甚至連怔一怔<br>
+冷血反應極快，又拿了一柄刀……這回輪到習英鳴一震。/（分段）冷血反應極快，又拿了一柄刀……這回輪到習英鳴一震。　（共十一段，需縮排段落）<br>
+<br>
 (敖先榮 2013/9/20)<br>
 涼颯颯/涼颼颼<br>
 邵家橋/鄢家橋 (閱文即知)<br>
