--- a/book/1515.html
+++ b/book/1515.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("川端康成《雪國》");
+SetTitle("川端康成【雪國】");
 SetLink('<a href="?M=hd&P=fiction-5">小說園地 書目</a>');
 </script>
 
@@ -12,20 +12,23 @@ $title = '雪國';
 $book = 'H1515';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/10/2 (124K) 2015/10/2');
+ShowUpdbDownload('2023/4/4 (124K) 2015/10/2');
 ShowPrcDownload('2015/10/2 (128K) 2015/10/2');
 ShowMobiDownload('2015/10/2 (377K)');
-ShowEpubDownload('2015/10/2 (92K) 2015/10/2');
-ShowVEpubDownload('2015/10/2 (92K) 2015/10/2');
+ShowEpubDownload('2023/4/4 (92K) 2015/10/2');
+ShowVEpubDownload('2023/4/4 (92K) 2015/10/2');
 BookSectionEnd();
 ?>
 <img src="covers/1515.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》。感謝chin223提供掃描檔(龍和版)。感謝娃娃OCR並整理校正：「不知道好讀原底本是什麼本子，但肯定不是書櫃封面的這個龍和本。龍和本有一些明顯的錯別字，已修正並列於勘誤表。」(2015/10/2)。譯者鄭皮耶。感謝ED2015勘誤7處。<br>
+好讀書櫃【典藏版】。感謝chin223提供掃描檔(龍和版)。感謝娃娃OCR並整理校正：「不知道好讀原底本是什麼本子，但肯定不是書櫃封面的這個龍和本。龍和本有一些明顯的錯別字，已修正並列於勘誤表。」(2015/10/2)。譯者鄭皮耶。感謝ED2015、Candace勘誤。<br>
 <br>
 好讀書櫃《經典版》，感謝naolee整理製作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Candace/IT 2023/4/4)<br>
+要探視故事般的興緻/要探視故事般的興致<br>
+<br>
 (ED2015 2015/10/2)<br>
 嚣/囂<br>
 获花/荻花<br>
