Revised books 10C5, 13L8, 13L9, and 13M0

--- a/Share/10C5.html
+++ b/Share/10C5.html
@@ -12,19 +12,27 @@ $title = '惡靈島';
 $book = 'I10C5';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2011/4/8 (479K) 2014/1/3');
-ShowPdbDownload('2010/5/29 (456K) 2014/1/3');
-ShowPrcDownload('2011/4/8 (459K) 2014/1/3');
-ShowEpubDownload('2011/4/8 (303K) 2014/1/3');
-ShowVEpubDownload('2014/1/3 (303K)');
+ShowUpdbDownload('2023/4/4 (479K) 2014/1/3 2011/4/8');
+ShowPdbDownload('2014/1/3 (456K) 2010/5/29');
+ShowPrcDownload('2014/1/3 (459K) 2011/4/8');
+ShowEpubDownload('2023/4/4 (303K) 2014/1/3 2011/4/8');
+ShowVEpubDownload('2023/4/4 (303K) 2014/1/3');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝Vienna整理製作。感謝linerak、yannling、阿克、Maori、Vivian勘誤。<br>
+好讀書櫃《經典版》，感謝Vienna整理製作。感謝linerak、yannling、阿克、Maori、Vivian、Takki Koo/IT勘誤。<br>
 <br>
 金田一耕助探案<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Takki Koo/IT 2023/4/4)<br>
+自我介紹一個/自我介紹一下<br>
+身為土肥/身為土匪<br>
+那是一哪年/那是哪一年<br>
+懷疑著深深的恨意/懷著深深的恨意<br>
+因為那人晚上/因為那個晚上<br>
+已御寮人/巴御寮人<br>
+<br>
 (mPDB 2014/1/3)<br>
 驚人他說：/驚人地說：<br>
 遲疑他說：/遲疑地說：<br>
