--- a/book/13M0.html
+++ b/book/13M0.html
@@ -12,16 +12,22 @@ $author = '赤川次郎';
 $title = '幽靈同好會'; 
 $book = 'E13M0';
 ShowBookTitle() ;
-ShowUpdbDownload('2013/11/1 (228K) 2015/2/6');
-ShowPrcDownload('2013/11/1 (207K) 2015/2/6');
-ShowEpubDownload('2013/11/1 (127K) 2015/2/6');
-ShowVEpubDownload('2013/11/1 (127K) 2015/2/6');
+ShowUpdbDownload('2023/4/4 (228K) 2015/2/6 2013/11/1');
+ShowPrcDownload('2015/2/6 (207K) 2013/11/1');
+ShowEpubDownload('2023/4/4 (127K) 2015/2/6 2013/11/1');
+ShowVEpubDownload('2023/4/4 (127K) 2015/2/6 2013/11/1');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝邱應琦整理製作。感謝Eirene、Vivian、9527勘誤。<br>
+好讀書櫃《經典版》，感謝邱應琦整理製作。感謝Eirene、Vivian、9527、Takki Koo/IT勘誤。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Takki Koo/IT 2023/4/4)<br>
+一十九歲/十九歲<br>
+吹到左右兩邊/推到左右兩邊<br>
+所站人/所站的<br>
+陪不是/賠不是<br>
+<br>
 (mPDB 2015/2/6)<br>
 你咋天為什/你昨日為什<br>
 高佻、靈/高挑、靈<br>
