--- a/book/13L8.html
+++ b/book/13L8.html
@@ -12,22 +12,31 @@ $author = '赤川次郎';
 $title = '幽靈列車'; 
 $book = 'E13L8';
 ShowBookTitle() ;
-ShowUpdbDownload('2013/11/1 (256K) 2014/1/3');
-ShowPdbDownload('2013/11/1 (242K) 2014/1/3');
-ShowPrcDownload('2013/11/1 (241K) 2014/1/3');
-ShowEpubDownload('2013/11/1 (147K) 2014/1/3');
-ShowVEpubDownload('2013/11/1 (147K) 2014/1/3');
+ShowUpdbDownload('2023/4/4 (256K) 2014/1/3 2013/11/1');
+ShowPdbDownload('2014/1/3 (242K) 2013/11/1');
+ShowPrcDownload('2014/1/3 (241K) 2013/11/1');
+ShowEpubDownload('2023/4/4 (147K) 2014/1/3 2013/11/1');
+ShowVEpubDownload('2023/4/4 (147K) 2014/1/3 2013/11/1');
 BookSectionEnd();
 ?>
 <img src="covers/13L8.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝邱應琦整理製作。感謝Eirene、Vivian勘誤。<br>
+好讀書櫃《經典版》，感謝邱應琦整理製作。感謝Eirene、Vivian、Takki Koo/IT勘誤。<br>
 <br>
 赤川28歲初試啼聲，以《幽靈列車》獲得日本「大眾讀物」推理小說新人獎，此後創作一發而不可收拾；其作品幽默浪漫配以電影蒙太奇手法，深受年輕讀者喜愛。<br>
 <br>
 本事：「幽靈列車」鬧得沸沸揚揚，刑事警局搜查一課宇野組長，奉局長命令調查此案，卻遇上好奇心強烈的女大學生永井夕子，倆人攜手——從此……。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Takki Koo/IT 2023/4/4)<br>
+熱人/熟人<br>
+耳旁的/椅旁的<br>
+接普/接著<br>
+似乎也似乎/似乎也<br>
+連氣/運氣<br>
+跳過丟/跳過去<br>
+直升撥/直升機<br>
+<br>
 (Vivian 2014/1/3)<br>
 消除疲勞的/消除疲勞的。<br>
 悅耳：/悅耳的：<br>
