--- a/book/13L9.html
+++ b/book/13L9.html
@@ -12,17 +12,23 @@ $author = '赤川次郎';
 $title = '幽靈候補生'; 
 $book = 'E13L9';
 ShowBookTitle() ;
-ShowUpdbDownload('2013/11/1 (155K) 2015/8/7');
-ShowPrcDownload('2013/11/1 (145K) 2015/8/7');
+ShowUpdbDownload('2023/4/4 (155K) 2015/8/7 2013/11/1');
+ShowPrcDownload('2015/8/7 (145K) 2013/11/1');
 ShowMobiDownload('2015/8/7 (410K)');
-ShowEpubDownload('2013/11/1 (90K) 2015/8/7');
-ShowVEpubDownload('2013/11/1 (90K) 2015/8/7');
+ShowEpubDownload('2023/4/4 (90K) 2015/8/7 2013/11/1');
+ShowVEpubDownload('2023/4/4 (90K) 2015/8/7 2013/11/1');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝邱應琦整理製作。感謝Eirene、Vivian、coco勘誤。<br>
+好讀書櫃《經典版》，感謝邱應琦整理製作。感謝Eirene、Vivian、coco、Takki Koo/IT勘誤。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Takki Koo/IT 2023/4/4)<br>
+下的兩/下的雨<br>
+音饗/音響<br>
+我和他大太彼此相愛/我和他太太彼此相愛<br>
+憧意/憧憬<br>
+<br>
 (mPDB 2015/8/7)<br>
 修改標點 (多處)<br>
 嘟嚷/嘟囔<br>
