--- a/Share/1010490030.html
+++ b/Share/1010490030.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷二十五：灞上局';
 $book = 'P1010490030';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/21');
-ShowEpubDownload('2022/12/21');
-ShowVEpubDownload('2022/12/21');
+ShowUpdbDownload('2023/4/4 2022/12/21');
+ShowEpubDownload('2023/4/4 2022/12/21');
+ShowVEpubDownload('2023/4/4 2022/12/21');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -103,6 +103,54 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/4/4)<br>
+雨、文傲，工/雨、文濤，工<br>
+和，徐少幫主算是/和，文少幫主算是<br>
+雨和文傲。至/雨和文濤。至<br>
+掀，文傲端著/掀，文濤端著<br>
+官，文傲一概/官，文濤一概<br>
+，向文傲道：/，向文濤道：<br>
+文傲得他/文濤得他<br>
+愉，文傲嘿嘿/愉，文濤嘿嘿<br>
+雨、文傲等人/雨、文濤等人<br>
+就是文傲文推/就是文濤文推<br>
+，我琢靡著，/，我琢磨著，<br>
+雨、文傲及一/雨、文濤及一<br>
+丈夫人和各/文夫人和各<br>
+去，丈夫人和各/去，文夫人和各<br>
+文傲邁著/文濤邁著<br>
+叫那丈夫人退還/叫那文夫人退還<br>
+了，文傲長期/了，文濤長期<br>
+獨孤文傲陪同/獨孤文濤陪同<br>
+們這一方呢？/們這一方呢？﹂<br>
+推官文傲打著/推官文濤打著<br>
+日子文傲一直/日子文濤一直<br>
+推官文傲看管/推官文濤看管<br>
+就向陳僉憲和陳/就向胡僉憲和陳<br>
+雨、文傲等人/雨、文濤等人<br>
+什麽韬光養/什麽韜光養<br>
+說笑一陣容，又/說笑一陣後，又<br>
+上噼呖啪啦/上噼嚦啪啦<br>
+：﹁文傲！御/：﹁文濤！御<br>
+推官文傲！﹂/推官文濤！﹂<br>
+　這文傲在他/　這文濤在他<br>
+的。文傲不是/的。文濤不是<br>
+就讓文傲遠遠/就讓文濤遠遠<br>
+人派文傲去見/人派文濤去見<br>
+認識文傲這位/認識文濤這位<br>
+員，文傲早被/員，文濤早被<br>
+推官文傲求見/推官文濤求見<br>
+這個文傲慣會/這個文濤慣會<br>
+下官文傲，見/下官文濤，見<br>
+就見文傲含著/就見文濤含著<br>
+文傲笑嘻/文濤笑嘻<br>
+文傲鬼鬼/文濤鬼鬼<br>
+文傲自袖/文濤自袖<br>
+看向文傲道：/看向文濤道：<br>
+文傲點點/文濤點點<br>
+文傲擠眉/文濤擠眉<br>
+文傲諂媚/文濤諂媚<br>
+出了背判的舉/出了背叛的舉<br>
 </font>
 </td></tr></table>
