--- a/Share/1010490031.html
+++ b/Share/1010490031.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷二十六：眉上黛';
 $book = 'P1010490031';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/23');
-ShowEpubDownload('2022/12/23');
-ShowVEpubDownload('2022/12/23');
+ShowUpdbDownload('2023/4/4 2022/12/23');
+ShowEpubDownload('2023/4/4 2022/12/23');
+ShowVEpubDownload('2023/4/4 2022/12/23');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -84,6 +84,22 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/4/4)<br>
+尖輕鼙，高/尖輕顰，高<br>
+銀的果端，盤/銀的果盤，盤<br>
+輕一鼙，輕/輕一顰，輕<br>
+，一鼙一笑/，一顰一笑<br>
+只是一一雙靴子/只是一雙靴子<br>
+輕輕鼙著眉/輕輕顰著眉<br>
+便是榮色天下/便是容色天下<br>
+奮地攥了擤拳頭/奮地攥了攥拳頭<br>
+是一鼙，道/是一顰，道<br>
+主也鼙眉細/主也顰眉細<br>
+頭大如鬥，古/頭大如斗，古<br>
+是往興教興走了/是往興教寺走了<br>
+婉兒鼙起好/婉兒顰起好<br>
+佛家有雲，因/佛家有云，因<br>
+寸光之輩﹂ /寸光之輩。﹂ <br>
 </font>
 </td></tr></table>
