--- a/Share/1010490032.html
+++ b/Share/1010490032.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷二十七：帝都亂象';
 $book = 'P1010490032';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/28');
-ShowEpubDownload('2022/12/28');
-ShowVEpubDownload('2022/12/28');
+ShowUpdbDownload('2023/4/4 2022/12/28');
+ShowEpubDownload('2023/4/4 2022/12/28');
+ShowVEpubDownload('2023/4/4 2022/12/28');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -76,6 +76,24 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(JC/IT 2023/4/4)<br>
+左鄰右捨生了/左鄰右舍生了<br>
+左鄰右捨了吧/左鄰右舍了吧<br>
+安樂之樂，在/安樂之美，在<br>
+膠牙饧﹂很/膠牙餳﹂很<br>
+賀年骈文，/賀年駢文，<br>
+宮廷禦宴大菜/宮廷御宴大菜<br>
+參加禦宴的人/參加御宴的人<br>
+以在禦宴上只/以在御宴上只<br>
+這頓禦宴一直/這頓御宴一直<br>
+離開禦宴的，/離開御宴的，<br>
+的，禦宴上沒/的，御宴上沒<br>
+今日禦宴上，/今日御宴上，<br>
+氏的一種示威/氏的一種示威。<br>
+帆，迎邀赴宴/帆，應邀赴宴<br>
+王武攸暨被此人率/王武懿宗被此人率<br>
+因爲不是東平王一房/因爲不但是東平王一房<br>
+進入政事黨以後/進入政事堂以後<br>
 </font>
 </td></tr></table>
