--- a/Share/1010490027.html
+++ b/Share/1010490027.html
@@ -18,7 +18,7 @@ ShowVEpubDownload('2023/3/23 2022/12/14');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
