Revised books 1786, 17T5, and 17T6

--- a/book/1786.html
+++ b/book/1786.html
@@ -12,14 +12,14 @@ $title = '冰峰暗隙';
 $book = 'B1786';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/3/3 (261K) 2017/4/7');
-ShowPrcDownload('2017/3/3 (284K) 2017/4/7');
-ShowMobiDownload('2017/3/3 (798K) 2017/4/7');
-ShowEpubDownload('2017/3/3 (192K) 2017/4/7');
-ShowVEpubDownload('2017/3/3 (192K) 2017/4/7');
+ShowUpdbDownload('2023/4/6 (261K) 2017/4/7 2017/3/3');
+ShowPrcDownload('2017/4/7 (284K) 2017/3/3');
+ShowMobiDownload('2017/4/7 (798K) 2017/3/3');
+ShowEpubDownload('2023/4/6 (192K) 2017/4/7 2017/3/3');
+ShowVEpubDownload('2023/4/6 (192K) 2017/4/7 2017/3/3');
 BookSectionEnd();
 ?>
-<img src="covers/1786.jpg" HSPACE=8 vspace=2 align=right>好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者李璐。感謝sue1289勘誤24處。<br>
+<img src="covers/1786.jpg" HSPACE=8 vspace=2 align=right>好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者李璐。感謝sue1289勘誤。<br>
 <br>
 <b>內容簡介</b><br>
 <br>
@@ -40,7 +40,11 @@ BookSectionEnd();
 另一位生還者、口述提供者：賽門‧葉慈（Simon Yates），英國列斯特郡人，大學畢業後即專注於登山活動，一面從事高空工作維生。與喬一同攀登修拉格蘭德峰時年方二十一。此次山難使他背負「割斷繩子的男人」罵名，然而喬能夠生還，與他的理性作風及義無反顧息息相關。在本書中，賽門道出救援喬的心理歷程，以及如何做出割斷繩索的痛苦決定。他的真實剖白與喬的傑出寫作，共同使本書成為重要的登山經典。賽門在洗清名聲後重返登山界，也擔任登山嚮導，帶領客戶攀登列寧峰等大山，現主持登山公司「Mountain Dream」。他也將自己的登山經歷寫成書，著有《絕境》、《探險的焰火》、《心中的野性》等。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(sue1289/IT 2023/4/6)<br>
+卨度/高度<br>
+冰蝕溝/冰蝕槽　（共四處）<br>
+<br>
 (sue1289 2017/4/7)<br>
 神泌/神祕<br>
 日光沐/日光浴 <font color=#0066CC>(原書有誤)</font><br>
