--- a/book/17T5.html
+++ b/book/17T5.html
@@ -12,15 +12,15 @@ $title = '失控的邏輯課';
 $book = 'E17T5';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (303K)');
+ShowUpdbDownload('2023/4/6 (303K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (311K)');
 ShowMobiDownload('2017/11/3 (860K)');
-ShowEpubDownload('2017/11/3 (199K)');
-ShowVEpubDownload('2017/11/3 (199K)');
+ShowEpubDownload('2023/4/6 (199K) 2017/11/3');
+ShowVEpubDownload('2023/4/6 (199K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17T5.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者吳宜潔、曉陽。<br>
+好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者吳宜潔、曉陽。感謝Gilbert勘誤。<br>
 <br>
 <b>內容簡介</b> (Obedience)<br>
 <br>
@@ -45,4 +45,27 @@ BookSectionEnd();
 吳宜潔，台大外文系畢業，英國瑞汀大學兒童文學碩士。曾任美國紐伯瑞金獎作家Linda Sue Park訪台期間隨行口譯、台北國際書展兒童館策展助理、基隆市文化局英語繪本講師。最喜歡寫字、拍照、閱讀周圍的人。現為自由譯者，譯有《聰明的波麗與大野狼》、《生存遊戲》，《閱讀兒童文學的樂趣》（合譯）。<br>
 <br>
 曉陽，小說嗜讀者，現任職出版界。<br>
+<br>
+<font size=2>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/4/6)<br>
+﹁百分之二﹂/﹁百分之二，﹂<br>
+，些人根本一點也不重要/，有些人根本一點也不重要<br>
+一個叫麥的男孩/一個叫麥克的男孩<br>
+我本來想上前問她可是她看起來非常生氣。/我本來想上前問她，可是她看起來非常生氣。<br>
+一找倒布赫多的文章/一找到布赫多的文章<br>
+噪噪不休/喋喋不休<br>
+父親絕進食/父親拒絕進食<br>
+一頭捲髮比以往還要凌亂她轉開水龍頭洗把臉/一頭捲髮比以往還要凌亂。她轉開水龍頭洗把臉<br>
+尷勝/尷尬<br>
+真賁/真實<br>
+東尼和我聽說了另一個女孩的事那個長得像迪安娜的女孩/東尼和我聽說了另一個女孩的事︱︱那個長得像迪安娜的女孩<br>
+鬆纖/鬆綁<br>
+還是被你的敵人發現了﹂/還是被你的敵人發現了。﹂<br>
+塞區河他們想把她帶往船的方向/塞區河︱︱他們想把她帶往船的方向<br>
+麥可真是個危險人物/麥克真是個危險人物<br>
+將波麗從麥可的身邊/將波麗從麥克的身邊<br>
+摩傷她的手臂/磨傷她的手臂<br>
+小豬．威廉斯/小豬．史蒂芬斯<br>
+</font>
 </td></tr></table>
