--- a/book/17T6.html
+++ b/book/17T6.html
@@ -12,15 +12,15 @@ $title = '深夜的文學課';
 $book = 'E17T6';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/11/3 (323K)');
+ShowUpdbDownload('2023/4/6 (323K) 2017/11/3');
 ShowPrcDownload('2017/11/3 (335K)');
 ShowMobiDownload('2017/11/3 (962K)');
-ShowEpubDownload('2017/11/3 (243K)');
-ShowVEpubDownload('2017/11/3 (243K)');
+ShowEpubDownload('2023/4/6 (243K) 2017/11/3');
+ShowVEpubDownload('2023/4/6 (243K) 2017/11/3');
 BookSectionEnd();
 ?>
 <img src="covers/17T6.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者謝佳真。<br>
+好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者謝佳真。感謝Gilbert勘誤。<br>
 <br>
 <b>內容簡介</b> (Dominance)<br>
 <br>
@@ -43,7 +43,75 @@ BookSectionEnd();
 謝佳真，商學背景的自由譯者，譯有《殘酷天才》、《潘朵拉處方》、《死亡之舞》、《紐約公寓》、《峰與谷》、《女祭司》等。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Gilbert 2023/4/6)<br>
+Through the Looking︱Glass，and What Alice Found There./Through the Looking-Glass, and What Alice Found There.<br>
+一總深色頭髮/一綹深色頭髮<br>
+爨轟播放/轟轟播放<br>
+坦鈉/坦納<br>
+挑豫/挑釁（共二處）<br>
+他不是為癡狂的樣子/他不是為書痴狂的樣子（癡、痴均可，依掃描檔校正之）<br>
+法奧斯朋人/法奧斯本人（共四處）<br>
+其實不是保羅．法奧斯„起碼，沒人能斷定那是不是/其實不是保羅．法奧斯。起碼，沒人能斷定那是不是<br>
+狂親的/狂飆的<br>
+雜持/維持<br>
+小心翼，慎重/小心翼翼，慎重<br>
+全跟著笑/全班跟著笑<br>
+不讓風雜走/不讓風颳走<br>
+鬍碴/鬍渣（共二處）<br>
+鬍澄/鬍渣<br>
+她暗暗叮囑自己晚一點記得向他討一根香從艾迪斯家到院長家的短短路程上/她暗暗叮囑自己晚一點記得向他討一根香菸；從艾迪斯家到院長家的短短路程上<br>
+﹂麗眉毛抬向二樓/﹂亞麗眉毛抬向二樓<br>
+假如他跟對杜蒙特命案感興趣的人通假如他以任何形式充當某人的精神導師/假如他跟對杜蒙特命案感興趣的人通信，假如他以任何形式充當某人的精神導師<br>
+結縝/結縭<br>
+現在他也只應付了這種事/現在他也只應付得了這種事<br>
+教授說：一理查非常古怪二/教授說：﹁理查非常古怪。﹂<br>
+枉蒙特/杜蒙特<br>
+記者誤解他7。/記者誤解他了。<br>
+煙壎的/煙燻的<br>
+孫了嘴唇/舔了嘴唇<br>
+一槍森掉腦袋/一槍轟掉腦袋<br>
+蝶翼邊緣向外擴散，：/蝶翼邊緣向外擴散︱︱<br>
+被風跪成堆/被風颳成堆<br>
+nouvclle imposture？/nouvclle imposture?<br>
+體會歡們的感覺/體會他們的感覺<br>
+跟教授及學生們見面嗯，這/跟教授及學生們見面︱︱嗯，這<br>
+心跳狂親/心跳狂飆<br>
+還讓疑我/還懷疑我<br>
+﹂他頓了頓，著酒杯。﹁/﹂他頓了頓，扭著酒杯。﹁<br>
+她覺得像觸電她看得出凱勒也一樣/她覺得像觸電︱︱她看得出凱勒也一樣<br>
+鈷在皮膚上/黏在皮膚上<br>
+摔了一絞/摔了一跤<br>
+在點陽光下看來/在點點陽光下看來<br>
+風熱辣辣的蹈著/風熱辣辣的颳著<br>
+只搆撂下這句話/只撂下這句話<br>
+法奧斯朋尊/法奧斯本尊<br>
+程序是什麼東？/程序是什麼東東？<br>
+縮微藤片/縮微膠片<br>
+動通不安/動盪不安<br>
+悔俐莎/梅俐莎<br>
+爵酌/斟酌<br>
+現在們全都會賠上/現在我們全都會賠上<br>
+﹁驕人！﹂/﹁騙人！﹂<br>
+我們想來他的狀況/我們想來看看他的狀況<br>
+現．在沒人會掛在嘴上/現在沒人會掛在嘴上<br>
+徐徐添過/徐徐舔過<br>
+手婉/手腕<br>
+弔嗜/弔唁<br>
+蔬舐/舔舐<br>
+。實，她也不知道對錯/。其實，她也不知道對錯<br>
+風勢跪走了/風勢颳走了<br>
+姅到/絆到<br>
+手搞/手稿<br>
+幾手要放棄/幾乎要放棄<br>
+布雷克起身，說﹁還有/布雷克起身，說：﹁還有<br>
+﹁給，﹂他說/﹁給你，﹂他說<br>
+革殺勿論/格殺勿論<br>
+抽蓄/抽搐<br>
+﹁我愛你﹂/﹁我愛你。﹂<br>
+我先生是是幽靈寫手/我先生是幽靈寫手<br>
+phillip Roth/Phillip Roth<br>
+<br>
 (mPDB 2017/11/3)<br>
 週未樂團/週末樂團<br>
 回億/回憶<br>
