Rrevised books 1010490033, 1010490034, and 1010490035

--- a/Share/1010490034.html
+++ b/Share/1010490034.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷二十九：神龍再變';
 $book = 'P1010490034';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/4');
-ShowEpubDownload('2023/1/4');
-ShowVEpubDownload('2023/1/4');
+ShowUpdbDownload('2023/4/6 2023/1/4');
+ShowEpubDownload('2023/4/6 2023/1/4');
+ShowVEpubDownload('2023/4/6 2023/1/4');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -82,6 +82,15 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/4/6)<br>
+番，收於收斂/番，終於收斂<br>
+想到老了老了，居/想到到老了，居<br>
+，李持娘固然/，李持盈固然<br>
+獨佔鳌頭，/獨佔鰲頭，<br>
+了討帝後歡心/了討帝后歡心<br>
+笑：荒涎、荒/笑：荒誕、荒<br>
+就更沒恥李顯/就更沒有李顯<br>
+因爲帝後和安/因爲帝后和安<br>
 </font>
 </td></tr></table>
