--- a/Share/1010490035.html
+++ b/Share/1010490035.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷三十：神龍三變';
 $book = 'P1010490035';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/1/9');
-ShowEpubDownload('2023/1/9');
-ShowVEpubDownload('2023/1/9');
+ShowUpdbDownload('2023/4/6 2023/1/9');
+ShowEpubDownload('2023/4/6 2023/1/9');
+ShowVEpubDownload('2023/4/6 2023/1/9');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -82,6 +82,17 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/4/6)<br>
+政務要張有馳/政務要有張有馳<br>
+影響那隻會害了/影響那是會害了<br>
+李仙凫幾個/李仙鳧幾個<br>
+李仙凫等人/李仙鳧等人<br>
+李旦死後，少/李顯死後，少<br>
+叩，山呼萬歲/叩，三呼萬歲<br>
+間，這我爭取/間，為我爭取<br>
+，不要張揚出/，不要有張揚出<br>
+分的诠釋。/分的詮釋。<br>
+血，可她又沒有力/血，可他又沒有力<br>
 </font>
 </td></tr></table>
