--- a/Share/1010490033.html
+++ b/Share/1010490033.html
@@ -12,13 +12,13 @@ $title = '醉枕江山卷二十八：神龍政變';
 $book = 'P1010490033';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2022/12/30');
-ShowEpubDownload('2022/12/30');
-ShowVEpubDownload('2022/12/30');
+ShowUpdbDownload('2023/4/6 2022/12/30');
+ShowEpubDownload('2023/4/6 2022/12/30');
+ShowVEpubDownload('2023/4/6 2022/12/30');
 BookSectionEnd();
 ?>
 <img src="covers/1010490010.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝顏國強整理製作。<br>
+好讀書櫃《經典版》，感謝顏國強整理製作。感謝JC/IT勘誤。<br>
 <br>
 <b>本書簡介：</b><br>
 女帝武曌日月凌空，上官婉兒稱量天下，<br>
@@ -89,6 +89,9 @@ BookSectionEnd();
 2011年至2012年，月關連續兩屆分別獲得起點中文網金鍵盤獎年度作家和年度作品兩項冠軍。2013年，月關獲得由莫言頒發的中國移動手機閱讀基地和閱讀榜中榜網路文學新作獎及「全民奧斯卡」創新網路文學獎。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/4/6)<br>
+己爲風閣侍郎/己爲鳳閣侍郎<br>
+僅是顯陷二宗/僅是顯隱二宗<br>
 </font>
 </td></tr></table>
