Revised books 1282, 1624, and 17Q4

--- a/book/1282.html
+++ b/book/1282.html
@@ -12,20 +12,23 @@ $author = '阿嘉莎．克莉絲蒂';
 $title = '黑麥奇案'; 
 $book = 'E1282';
 ShowBookTitle();
-ShowUpdbDownload('2012/6/30 (217K) 2017/8/4');
-ShowPrcDownload('2012/6/30 (208K) 2017/8/4');
-ShowMobiDownload('2016/8/5 (613K) 2017/8/4');
-ShowEpubDownload('2012/6/30 (153K) 2017/8/4');
-ShowVEpubDownload('2016/8/5 (153K) 2017/8/4');
+ShowUpdbDownload('2023/4/8 (217K) 2017/8/4 2012/6/30');
+ShowPrcDownload('2017/8/4 (208K) 2012/6/30');
+ShowMobiDownload('2017/8/4 (613K) 2016/8/5');
+ShowEpubDownload('2023/4/8 (153K) 2017/8/4 2012/6/30');
+ShowVEpubDownload('2023/4/8 (153K) 2017/8/4 2016/8/5');
 BookSectionEnd();
 ?>
 <img src="covers/1282.jpg" HSPACE=8 align=right>
-好讀書櫃《<a href="?M=hd&P=together">分工輸入</a>版》，感謝Sai Lee提供掃描檔，感謝眾讀友分工輸入。感謝sue1289合成編輯：「故事懸疑、精采，相當好看！」感謝蔡淑婷勘誤。感謝Joyce勘誤8處。<br>
+好讀書櫃【典藏版】，感謝Sai Lee提供掃描檔，感謝眾讀友分工輸入。感謝sue1289合成編輯：「故事懸疑、精采，相當好看！」感謝蔡淑婷、Joyce、苟利國/IT勘誤。<br>
 <br>
 《黑麥奇案》(A Pocket Full of Rye) 譯者：宋碧雲<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(苟利國/IT 2023/4/8)<br>
+似乎有點因惑/似乎有點困惑<br>
+<br>
 (Joyce 2017/8/4)<br>
 茶房總房/茶房總管 <font color=#0066CC>(原書有誤)</font><br>
 波羅地海/波羅的海<br>
