--- a/book/1624.html
+++ b/book/1624.html
@@ -12,18 +12,21 @@ $author = '伊塔羅．卡爾維諾';
 $title = '如果在冬夜，一個旅人'; 
 $book = 'B1624';
 ShowBookTitle() ;
-ShowUpdbDownload('2016/2/5 (317K)');
+ShowUpdbDownload('2023/4/8 (317K) 2016/2/5');
 ShowPrcDownload('2016/2/5 (345K)');
 ShowMobiDownload('2016/2/5 (978K)');
-ShowEpubDownload('2016/2/5 (243K)');
-ShowVEpubDownload('2016/2/5 (243K)');
+ShowEpubDownload('2023/4/8 (243K) 2016/2/5');
+ShowVEpubDownload('2023/4/8 (243K) 2016/2/5');
 BookSectionEnd();
 ?>
 <img src="covers/1624.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Ann Cheng掃描原書(時報文化，1993年版)整理校正過，並提供掃描檔。校譯者吳潛誠。<br>
+好讀書櫃【典藏版】，感謝Ann Cheng掃描原書(時報文化，1993年版)整理校正過，並提供掃描檔。校譯者吳潛誠。感謝Wanyu/IT勘誤。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Wanyu/IT 2023/4/8)<br>
+湫隘/狹隘<br>
+<br>
 (mPDB 2016/2/5)<br>
 修改標點 (數處)<br>
 藉藉無名/籍籍無名<br>
