--- a/book/17Q4.html
+++ b/book/17Q4.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("《日本短篇推理精選１》");
+SetTitle("眾多作者【日本短篇推理精選１】");
 SetLink('<a href="?M=hd&P=mystery-5">懸疑小說 書目</a>');
 </script>
 
@@ -7,26 +7,29 @@ SetLink('<a href="?M=hd&P=mystery-5">懸疑小說 書目</a>');
 <tr><td>
 <?php
 require_once('show-book.php');
-$author = '';
+$author = '眾多作者';
 $title = '日本短篇推理精選１'; 
 $book = 'E17Q4';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/10/6 (257K)');
+ShowUpdbDownload('2023/4/8 (257K) 2017/10/6');
 ShowPrcDownload('2017/10/6 (257K)');
 ShowMobiDownload('2017/10/6 (712K)');
-ShowEpubDownload('2017/10/6 (162K)');
-ShowVEpubDownload('2017/10/6 (162K)');
+ShowEpubDownload('2023/4/8 (162K) 2017/10/6');
+ShowVEpubDownload('2023/4/8 (162K) 2017/10/6');
 BookSectionEnd();
 ?>
 <img src="covers/17Q4.jpg" HSPACE=8 vspace=2 align=right>
 <img src="covers/17Q4a.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝guinness按掃描檔整理製作。譯者廖為智。<br>
+好讀書櫃【典藏版】，感謝chin223提供掃描檔。感謝guinness按掃描檔整理製作。譯者廖為智。感謝張乙巳/IT勘誤。<br>
 <br>
 在本集中入選的七位作家（作者：松本清張、結城昌治、半村良、笹澤左保、仁木悅子、海渡英祐、森村誠一），在日本都是家喻戶曉的名家。他（她）們縱橫文壇，歷久不衰，乃是因為作品能經得起無數讀者嚴格的挑剔與考驗。他們深刻、緻密的寫實技巧，對社會風習、人性的剖析與針砭，使他們的作品閃耀恆久的光芒。這那裡是風花雪月、瘋瘋癲癲的囈語所能比擬！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(張乙巳/IT 2023/4/8)<br>
+被掉包的情事/被掉包的事情<br>
+<br>
 (mPDB 2017/10/6)<br>
 產生與趣/產生興趣<br>
 撿到昵？/撿到呢？<br>
