Revised books 558, 0817, and 14K7

--- a/Share/0817.html
+++ b/Share/0817.html
@@ -12,17 +12,27 @@ $title = '樓下的房客';
 $book = 'I0817';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2011/11/4 (221K) 2017/12/1');
+ShowUpdbDownload('2023/4/8 (221K) 2017/12/1 2011/11/4');
 ShowPrcDownload('2011/11/4 (155K) 2017/12/1');
 ShowMobiDownload('2017/12/1 (636K)');
-ShowEpubDownload('2011/11/4 (155K) 2017/12/1');
-ShowVEpubDownload('2017/12/1 (155K)');
+ShowEpubDownload('2023/4/8 (155K) 2017/12/1 2011/11/4');
+ShowVEpubDownload('2023/4/8 (155K) 2017/12/1');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝邱子軒整理製作：「可以單純當一部驚悚小說來看，但是，最令我感興趣的是作者將許許多多不相干的元素，編成一幕幕荒謬絕倫的黑色鬧劇，卻又合理到讓人幾乎以為可能在你我身邊發生過...可說是道盡人類黑暗妄想的作品。」感謝江季杭勘誤。感謝黑白貓勘誤14處。<br>
+好讀書櫃《經典版》，感謝邱子軒整理製作：「可以單純當一部驚悚小說來看，但是，最令我感興趣的是作者將許許多多不相干的元素，編成一幕幕荒謬絕倫的黑色鬧劇，卻又合理到讓人幾乎以為可能在你我身邊發生過...可說是道盡人類黑暗妄想的作品。」感謝江季杭、黑白貓、Soler/IT勘誤。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Soler/IT 2023/4/8)<br>
+想同她說/想跟她說<br>
+求我讓我搬進來/求我讓他搬進來<br>
+hollow kitty/Hello Kitty　（共兩處）<br>
+惦著腳尖/踮著腳尖　（共三處）<br>
+虎爛/唬爛<br>
+小彆三/小癟三<br>
+他親哥哥/她親哥哥<br>
+痛撤心扉/痛徹心扉<br>
+<br>
 (mPDB 2017/12/1)<br>
 抽慉/抽搐<br>
 就是沒輒。/就是沒轍。<br>
