--- a/book/14K7.html
+++ b/book/14K7.html
@@ -1,6 +1,6 @@
 <script type="text/javascript">
 SetTitle("珍．奧斯汀《勸導》");
-SetLink('<a href="?M=hd&P=fiction-4">小說園地 書目</a>');
+SetLink('<a href="?M=hd&P=fiction-6">小說園地 書目</a>');
 </script>
 
 <table class="m11" BORDER="0" CELLSPACING="0" CELLPADDING="2" WIDTH="100%">
@@ -12,19 +12,22 @@ $title = '勸導';
 $book = 'H14K7';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2014/6/6 (303K)');
+ShowUpdbDownload('2023/4/8 (303K) 2014/6/6');
 ShowPdbDownload('2014/6/6 (299K)');
 ShowPrcDownload('2014/6/6 (324K)');
-ShowEpubDownload('2014/6/6 (226K)');
-ShowVEpubDownload('2014/6/6 (226K)');
+ShowEpubDownload('2023/4/8 (226K) 2014/6/6');
+ShowVEpubDownload('2023/4/8 (226K) 2014/6/6');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝Angela Huang整理製作：「我從網路上找到這本書的電子檔，手中並無實體書可對照。可是已將全文閱讀過，儘量將文中錯字，不恰當的標點符號或不通順的文句仔細修改。」。<br>
+好讀書櫃《經典版》，感謝Angela Huang整理製作：「我從網路上找到這本書的電子檔，手中並無實體書可對照。可是已將全文閱讀過，儘量將文中錯字，不恰當的標點符號或不通順的文句仔細修改。」。感謝李旻家/IT勘誤。<br>
 <br>
 小說講述了一個歷經磨難、終成正果的曲折愛情故事。主人公安妮．埃利奧特是個出身貴族家庭的小姐，與青年軍官溫特沃思真心相愛，並私自訂下終身。安妮的父親和教母認為溫特沃思出身卑微，因此極力反對兩人交往。安妮被迫中斷了與溫特沃思的戀情，但對他的感情卻依然如故。八年後，溫特沃思上校榮歸故里，與安妮舊情難忘，在歷經曲折後，有情人終成眷屬。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(李旻家/IT 2023/4/8)<br>
+我我一定會感染上／我一定會感染上<br>
+<br>
 (mPDB 2014/6/6)<br>
 不很偷快/不很愉快<br>
 感到惋借/感到惋惜<br>
