--- a/book/558.html
+++ b/book/558.html
@@ -12,14 +12,14 @@ $title = '西遊記';
 $book = 'H558';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/3/3 (1502K)');
+ShowUpdbDownload('2023/4/8 (1502K) 2017/3/3');
 ShowPrcDownload('2017/3/3 (1589K)');
 ShowMobiDownload('2017/3/3 (4421K)');
-ShowEpubDownload('2017/3/3 (1110K)');
-ShowVEpubDownload('2017/3/3 (1110K)');
+ShowEpubDownload('2023/4/8 (1110K) 2017/3/3');
+ShowVEpubDownload('2023/4/8 (1110K) 2017/3/3');
 BookSectionEnd();
 ?>
-好讀書櫃【典藏版】，感謝chin223提供掃描檔。<br>
+好讀書櫃【典藏版】，感謝chin223提供掃描檔。感謝網友/IT勘誤。<br>
 <br>
 《西遊記》的故事雖以西天取經為主軸，但其中的主人翁並非唐三藏，而是孫悟空。全書從石猴誕生開始，便充滿不凡的氣勢。「目運兩道金光，射沖斗府」並驚動玉皇大帝。人們讀到這裡，自然被這種不凡的氣勢所吸引。自孫悟空誕生之後，歷經拜師學藝，大鬧天宮，以至後來保護唐三藏到西天取經，終於得成正果。<br>
 <br>
@@ -38,7 +38,10 @@ BookSectionEnd();
 生活困頓給吳承恩帶來的壓力並不小於科考的失利。父親去世以後，他需要操持全家的所有開支，但他卻沒有支撐門戶的能力，更沒有養家活口的手段。家中生活來源，除了每月從學府裡領回六斗米外，只能坐食父親所留遺產了。品嚐了社會人生酸甜苦辣的吳承恩，開始更加清醒地、深沉地考慮社會人生的問題，並且用自己的詩文向不合理的社會進行抗爭。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(網友/IT 2023/4/8)<br>
+孟蘭盆會/盂蘭盆會<br>
+<br>
 (mPDB 2017/3/3)<br>
 修改標點 (數處)<br>
 補缺字 (數處)<br>
