Revised books 69, 15S3, and 17N7

--- a/book/15S3.html
+++ b/book/15S3.html
@@ -12,20 +12,27 @@ $title = '生命中不能承受之輕';
 $book = 'H15S3';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/10/2 (324K)');
+ShowUpdbDownload('2023/4/11 (324K) 2015/10/2');
 ShowPrcDownload('2015/10/2 (342K)');
 ShowMobiDownload('2015/10/2 (942K)');
-ShowEpubDownload('2015/10/2 (222K)');
-ShowVEpubDownload('2015/10/2 (222K)');
+ShowEpubDownload('2023/4/11 (222K) 2015/10/2');
+ShowVEpubDownload('2023/4/11 (222K) 2015/10/2');
 BookSectionEnd();
 ?>
 <img src="covers/15S3.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Ann Cheng掃描原書(時報，1989年版)整理校正過，並提供掃描檔。感謝薛恭貴勘誤。<br>
+好讀書櫃《典藏版》，感謝Ann Cheng掃描原書(時報，1989年版)整理校正過，並提供掃描檔。感謝薛恭貴、regina/IT勘誤。<br>
 <br>
 Milan Kundera《The Unbearable Lightness of Being》。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(regina/IT 2023/4/11)<br>
+約前六世紀未/約前六世紀末<br>
+現住/現在<br>
+然俊/然後<br>
+事資上/事實上<br>
+一九七o年/一九七〇年<br>
+<br>
 (薛恭貴 2015/10/2)<br>
 給她最多舒坦/給他最多舒坦 <font color=#0066CC>(改了，原書有錯。)</font><br>
 掛看黑帆/掛著黑帆<br>
