--- a/book/17N7.html
+++ b/book/17N7.html
@@ -12,15 +12,15 @@ $title = '利器';
 $book = 'E17N7';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/10/6 (329K)');
+ShowUpdbDownload('2023/4/11 (329K) 2017/10/6');
 ShowPrcDownload('2017/10/6 (349K)');
 ShowMobiDownload('2017/10/6 (978K)');
-ShowEpubDownload('2017/10/6 (238K)');
-ShowVEpubDownload('2017/10/6 (238K)');
+ShowEpubDownload('2023/4/11 (238K) 2017/10/6');
+ShowVEpubDownload('2023/4/11 (238K) 2017/10/6');
 BookSectionEnd();
 ?>
 <img src="covers/17N7.jpg" HSPACE=8 vspace=2 align=right>
-好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者張思婷。<br>
+好讀書櫃《典藏版》，感謝邱五掃描原書整理製作，並提供掃描檔。譯者張思婷。感謝Elva Lin/IT勘誤。<br>
 <br>
 <b>內容簡介：(Sharp Objects)</b><br>
 <br>
@@ -45,7 +45,16 @@ BookSectionEnd();
 張思婷，台大外文系、師大翻譯所畢業。熱愛翻譯。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Elva Lin/IT 2023/4/11)<br>
+待殊地點/特殊地點<br>
+迷你搭裙配平口小可愛/迷你裙搭配平口小可愛<br>
+有有肉/有血有肉<br>
+蠖筆/蠟筆<br>
+她是，個/她是一個<br>
+後來就沒再也跟妳媽碰面了/後來就再也沒跟妳媽碰面了<br>
+她黏我點得/她黏我黏得<br>
+<br>
 (mPDB 2017/10/6)<br>
 浴紅/浴缸<br>
 </font>
