--- a/book/69.html
+++ b/book/69.html
@@ -12,11 +12,11 @@ $author = '黃易';
 $title = '尋秦記一'; 
 $book = 'D69a';
 ShowBookTitle();
-ShowUpdbDownload('2011/9/11 (548K) 2015/10/2');
+ShowUpdbDownload('2023/4/11 (548K) 2015/10/2 2011/9/11');
 ShowPrcDownload('2011/9/11 (571K) 2015/10/2');
 ShowMobiDownload('2015/10/2 (1614K)');
-ShowEpubDownload('2011/9/11 (406K) 2015/10/2');
-ShowVEpubDownload('2012/12/7 (406K) 2015/10/2');
+ShowEpubDownload('2023/4/11 (406K) 2015/10/2 2011/9/11');
+ShowVEpubDownload('2023/4/11 (406K) 2015/10/2 2012/12/7');
 Space();
 $title = '尋秦記二'; 
 $book = 'D69b';
@@ -65,14 +65,17 @@ ShowVEpubDownload('2012/12/7 (479K) 2015/10/2');
 BookSectionEnd();
 ?>
 <img src="covers/69.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，美格騰再整理校正過。感謝嘉明、黃小蛙、Damon、amber、CE、寶寶、chchwy、敖先榮、大頭、小兔、熊卓斌勘誤。感謝For Lam勘誤二1處三1處四2處。<br>
+好讀書櫃《典藏版》，美格騰再整理校正過。感謝嘉明、黃小蛙、Damon、amber、CE、寶寶、chchwy、敖先榮、大頭、小兔、熊卓斌、For Lam、逍遙昱昕/IT勘誤。<br>
 <br>
 2010/4/29 感謝Rabrus精校並補齊斷漏字句，尤其尋秦記六錯漏稍多，比較費時費事。<br>
 <br>
 二十一世紀中國特種部隊的精銳戰士項少龍成了實驗的白老鼠，被送回公元前的戰國時代，可是時空機器發生了毀滅性的大爆炸，所有參與的科研人員均灰飛煙滅。項少龍則流落到二千多年前中國最動盪和變化急劇的時代裡。於是尋找秦始皇便成為他唯一的目標，只有成為當時尚落泊趙都邯鄲的贏政的拍擋，才有機會成為當時代的強者。其中過程，自是妙趣橫生，曲折離奇。這是絕對不能錯過天馬行空般的科幻創作。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(尋秦記一 逍遙昱昕/IT 2023/4/11)<br>
+第二章有兩處「項少龍乍見春光，又看她眉目如畫，色心大動，走了過去，豈知腳步不穩」，其中第二處是衍文，應删掉。<br>
+<br>
 (尋秦記二 For Lam 2017/9/1)<br>
 月交/膠<br>
 <br>
