Revised books 1168, 12H0, and 1010490073

--- a/Share/1010490073.html
+++ b/Share/1010490073.html
@@ -12,13 +12,13 @@ $title = '智利秘密行動';
 $book = 'P1010490073';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/2/17');
-ShowEpubDownload('2023/2/17');
-ShowVEpubDownload('2023/2/17');
+ShowUpdbDownload('2023/4/11 2023/2/17');
+ShowEpubDownload('2023/4/11 2023/2/17');
+ShowVEpubDownload('2023/4/11 2023/2/17');
 BookSectionEnd();
 ?>
 <img src="covers/1010490073.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝sue1289整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝sue1289整理製作，感謝chin223提供掃瞄檔。感謝JC/IT勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -47,6 +47,9 @@ BookSectionEnd();
 淡江大學英文系畢業，密西根州立大學社會學碩士，密蘇里新聞學院新聞組碩士。曾任雜誌社編輯、報社編譯，英文教師。<br>
 <br>
 <font size=2>
-<strong>勘誤表</strong>：<br>
+<strong>勘誤表：</strong><br>
+(JC/IT 2023/4/11)<br>
+名一字／名字<br>
+﹁我拔腳／我拔腳<br>
 </font>
 </td></tr></table>
