--- a/book/1168.html
+++ b/book/1168.html
@@ -12,15 +12,15 @@ $title = '赤地之戀';
 $book = 'H1168';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2011/4/29 (271K) 2015/6/5');
+ShowUpdbDownload('2023/4/11 (271K) 2015/6/5 2011/4/29');
 ShowPrcDownload('2011/4/29 (284K) 2015/6/5');
 ShowMobiDownload('2015/6/5 (792K)');
-ShowEpubDownload('2011/4/29 (189K) 2015/6/5');
-ShowVEpubDownload('2013/11/8 (189K) 2015/6/5');
+ShowEpubDownload('2023/4/11 (189K) 2015/6/5 2011/4/29');
+ShowVEpubDownload('2023/4/11 (189K) 2015/6/5 2013/11/8');
 BookSectionEnd();
 ?>
 <img src="covers/1168.jpg" HSPACE=8 align=right>
-好讀書櫃《經典版》，感謝guinness整理製作。感謝Sai Lee提供掃描。感謝Shao Baoqing、allen、loading1912勘誤。<br>
+好讀書櫃《經典版》，感謝guinness整理製作。感謝Sai Lee提供掃描。感謝Shao Baoqing、allen、loading1912、regina/IT勘誤。<br>
 <br>
 為了提升農民的生活，政府動員學生參加「土改」，剛從北京的大學畢業的劉荃也積極地搶著報名。他興奮不已地來到農民的家中，卻赫然發現國家所謂的改革和他想像的完全不同。在激情的高呼聲中，大家似乎不再有是非黑白，鬥爭大會的意義也只是讓人人活在恐懼中，許多無辜者被當成犯人押上刑場，民兵冷血殘酷地執行槍決，連劉荃都被迫當了劊子手。<br>
 <br>
@@ -33,7 +33,11 @@ BookSectionEnd();
 『我確是愛好真實到了迷信的程度。我相信任何人的真實的經驗永遠是意味深長的，而且永遠是新鮮的，永不會成為濫調……《赤地之戀》所寫的是真人真事……我只希望讀者看這本書的時候，能夠多少嗅到一點真實的生活氣息。』──張愛玲<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(regina/IT 2023/4/11)<br>
+根據《教育部重編國語辭典修訂本》，「鎗」指可發射子彈以射擊目標的武器，通「槍」，例如「手鎗」、「步鎗」、「機關鎗」。故內文「鎗」字正確。<br>
+空無一吻/空無一物<br>
+<br>
 (mPDB 2015/6/5)<br>
 嘟嚷/嘟囔<br>
 <br>
