--- a/book/12H0.html
+++ b/book/12H0.html
@@ -12,15 +12,15 @@ $title = '秦謎：秦始皇的祕密';
 $book = 'C12H0';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2012/11/2 (363K) 2016/10/7');
+ShowUpdbDownload('2023/4/11 (363K) 2016/10/7 2012/11/2');
 ShowPrcDownload('2012/11/2 (355K) 2016/10/7');
 ShowMobiDownload('2015/9/4 (1101K) 2016/10/7');
-ShowEpubDownload('2012/11/2 (306K) 2016/10/7');
-ShowVEpubDownload('2012/11/2 (307K) 2016/10/7');
+ShowEpubDownload('2023/4/11 (306K) 2016/10/7 2012/11/2');
+ShowVEpubDownload('2023/4/11 (307K) 2016/10/7 2012/11/2');
 BookSectionEnd();
 ?>
 <img src="covers/12H0.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝ansa參照原書整理校正過：「來源：簡體電子檔（原書名：《秦始皇的秘密》），校正：參照正體字版（2010，聯經）」感謝謝易勳、Joy、Kyle Song勘誤。感謝khaisuan勘誤4處。<br>
+好讀書櫃《典藏版》，感謝ansa參照原書整理校正過：「來源：簡體電子檔（原書名：《秦始皇的秘密》），校正：參照正體字版（2010，聯經）」感謝謝易勳、Joy、Kyle Song、khaisuan、Bee/IT勘誤。<br>
 <br>
 都是司馬遷惹的禍<br>
 讀《史記》一頭霧水<br>
@@ -47,7 +47,12 @@ BookSectionEnd();
 重寫秦始皇的一生！<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Bee/IT 2023/4/11)<br>
+所察覺到到的/所察覺到的<br>
+超姬/趙姬<br>
+頃襄土卒/頃襄王卒<br>
+<br>
 (khaisuan 2016/10/7)<br>
 內容乂要/內容大要<br>
 耶投降/也投降<br>
