Revised books 394, 1315, and 15P9

--- a/book/1315.html
+++ b/book/1315.html
@@ -12,15 +12,15 @@ $title = '12個簡單＋12個豐富';
 $book = 'B1315';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2013/1/11 (80K) 2016/11/4');
+ShowUpdbDownload('2023/4/13 (80K) 2016/11/4 2013/1/11');
 ShowPrcDownload('2013/1/11 (83K) 2016/11/4');
 ShowMobiDownload('2016/11/4 (260K)');
-ShowEpubDownload('2013/1/11 (63K) 2016/11/4');
-ShowVEpubDownload('2013/1/11 (63K) 2016/11/4');
+ShowEpubDownload('2023/4/13 (63K) 2016/11/4 2013/1/11');
+ShowVEpubDownload('2023/4/13 (63K) 2016/11/4 2013/1/11');
 BookSectionEnd();
 ?>
 <img src="covers/1315.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Smiley參照原書整理校正過。<br>
+好讀書櫃【典藏版】，感謝Smiley參照原書整理校正過。感謝Shouman/IT勘誤。<br>
 <br>
 12個簡單＋12個豐富<br>
 作者：林慶昭<br>
@@ -45,7 +45,17 @@ BookSectionEnd();
 美國總統林肯說：「人快樂的程度多半是由自己決定的。」當一個人的慾望減少了，當一個人的貪念降低了，心情就不會受到影響，就能坦然或泰然地面對各種發生的事情。學會簡單過生活，就是擁有最豐富的人生。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(Shouman/IT 2023/4/13)<br>
+也很自己。/也恨自己。<br>
+像刺蜻般/像刺蝟般<br>
+這隻徇/這隻狗<br>
+大們經常/人們經常<br>
+憎很一個人/憎恨一個人<br>
+說不定遺每下愈況/說不定還每下愈況<br>
+造成不人們/造成了人們<br>
+遺有飄逸/還有飄逸<br>
+<br>
 (mPDB 2016/11/4)<br>
 生活簡撲/生活簡樸<br>
 囫圖吞棗/囫圇吞棗<br>
