--- a/book/15P9.html
+++ b/book/15P9.html
@@ -12,20 +12,42 @@ $title = '曹雪芹別傳';
 $book = 'C15P9';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/8/7 (787K) 2015/9/4');
+ShowUpdbDownload('2023/4/13 (787K) 2015/9/4 2015/8/7');
 ShowPrcDownload('2015/8/7 (772K) 2015/9/4');
 ShowMobiDownload('2015/8/7 (2104K) 2015/9/4');
-ShowEpubDownload('2015/8/7 (494K) 2015/9/4');
-ShowVEpubDownload('2015/8/7 (494K) 2015/9/4');
+ShowEpubDownload('2023/4/13 (494K) 2015/9/4 2015/8/7');
+ShowVEpubDownload('2023/4/13 (494K) 2015/9/4 2015/8/7');
 BookSectionEnd();
 ?>
 <img src="covers/15P9.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝Sai Lee提供掃描檔，感謝Kyle Song按掃描檔OCR並二校。感謝林慧旻、王淑嫻協助校正。感謝JC勘誤。<br>
+好讀書櫃【典藏版】，感謝Sai Lee提供掃描檔，感謝Kyle Song按掃描檔OCR並二校。感謝林慧旻、王淑嫻協助校正。感謝JC、yu man po/IT勘誤。<br>
 <br>
 曹家在南京獲罪被抄沒後，曹雪芹隨母親、叔父北上歸旗，求學於八旗子弟官學。在此期間，曹雪芹的人生經歷更為豐富，見識了上至朝廷軍國大事、下至百姓市井生活的種種情景。其間穿插著稗官野史、風月筆墨、江湖幫派的秘聞和痴情兒女的故事，一波三折，扣人心弦。<br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(yu man po/IT 2023/4/13)<br>
+護衝是誰派的/護衛是誰派的<br>
+那兩個護術/那兩個護衛<br>
+印務由副將紀成斌護理/軍務由副將紀成斌代理<br>
+曹震大為搖顛/曹震大為搖頭<br>
+自實似地在額上打了一下/自責似地在額上打了一下<br>
+你們粧神弄鬼/你們裝神弄鬼<br>
+「對了！回頭你們好好談談。」曹族說道/「對了！回頭你們好好談談。」曹震說道<br>
+「這件事，總耍等小王爺放大將軍的事定局了才能談。」/「這件事，總要等小王爺放大將軍的事定局了才能談。」<br>
+總春自己都覺得好笑/繡春自己都覺得好笑<br>
+後乾了交到秋月手中/絞乾了交到秋月手中<br>
+胤褆/胤禔<br>
+繡春不好蕙思地笑道/繡春不好意思地笑道<br>
+這是個緊耍關頭/這是個緊要關頭<br>
+是以太和洋溢，詳瑞疊見/是以太和洋溢，祥瑞疊見<br>
+秋月很起勁地說：「那就商量辦軎事吧！」/秋月很起勁地說：「那就商量辦喜事吧！」<br>
+也許空等一輩子；我妹妹也忍命了。/也許空等一輩子；我妹妹也認命了。<br>
+繡_春住在她後房/繡春住在她後房<br>
+但風流要出之以蘊_藉/但風流要出之以蘊藉<br>
+不意錦兒生產，計畫落定的經過/不意錦兒生產，計畫落空的經過<br>
+耍太太許了我，我才能起來。/要太太許了我，我才能起來。<br>
+<br>
 (JC 2015/8/7)<br>
 曹雪拜/曹雪芹<br>
 跟保住嘴/跟保住說<br>
