--- a/book/394.html
+++ b/book/394.html
@@ -12,14 +12,14 @@ $title = '邊城';
 $book = 'A394';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2010/12/17 (113K) 2015/11/6');
+ShowUpdbDownload('2023/4/13 (113K) 2015/11/6 2010/12/17');
 ShowPrcDownload('2010/12/17 (118K) 2015/11/6');
 ShowMobiDownload('2015/8/7 (367K) 2015/11/6');
-ShowEpubDownload('2010/12/17 (96K) 2015/11/6');
-ShowVEpubDownload('2015/8/7 (96K) 2015/11/6');
+ShowEpubDownload('2023/4/13 (96K) 2015/11/6 2010/12/17');
+ShowVEpubDownload('2023/4/13 (96K) 2015/11/6 2015/8/7');
 BookSectionEnd();
 ?>
-好讀書櫃《典藏版》，感謝eagle.rex參照台灣商務印書館1998年版再整理校正過。感謝薛嚴嚴勘誤1處、涂正明勘誤1處、sue1289勘誤15處。<br>
+好讀書櫃【典藏版】，感謝eagle.rex參照台灣商務印書館1998年版再整理校正過。感謝薛嚴嚴、涂正明、sue1289、黄俊亮/IT勘誤。<br>
 <br>
 好讀書櫃《經典版》，美格騰再整理校正過。感謝李永聖勘誤。
 <br>
@@ -64,7 +64,14 @@ BookSectionEnd();
 <br>早在30年代中期，沈從文就頗為自信地寫道："……說句公道話，我實在是比某些時下所謂作家高一籌的。我的工作行將超越一切而上。我的作品會比這些人的作品更傳得久，播得遠。我沒有方法拒絕。"（《從文家書·湘行書簡》）果然，沈從文的作品經受住了時代風雲和時間的考驗，成為經典，沈從文的預言變成了現實。 <br>
 <br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表：</strong><br>
+(黄俊亮/IT 2023/4/13)<br>
+西陽/酉陽<br>
+喜於泅水/善於泅水<br>
+棕櫚根樹株/棕櫚樹根株<br>
+快快的走去了/怏怏的走去了<br>
+一盒糍糖/一盒糍粑<br>
+<br>
 (mPDB 2015/11/6)<br>
 咕咕笑著/咭咭笑著<br>
 手去搯蔥。/手去掐蔥。<br>
